--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -44,3 +44,11 @@ table {
 a{
    text-decoration: none;
 }
+
+/* element-ui 中表格的样式，因为需要使用全局样式才生效 */
+.el-table .warning-row {
+   background: rgba(233, 183, 194, 0.295);
+}
+.el-table .success-row {
+   background: rgba(197, 236, 179, 0.411);
+}
